exec-liveness.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-exec
  labels:
    name: liveness
spec:
  containers:
  - name: liveness
    image: k8s.gcr.io/busybox
    args:
      - /bin/sh
      - -c
      - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
    livenessProbe: # 컨테이너가 살았는지 판단하는 기능
      exec:
        command:
          - cat
          - /tmp/healthy
      initialDelaySeconds: 5
      periodSeconds: 5
