http-go-pod-v3.yml
apiVersion: v1
kind: Pod
metadata:
  name: http-go-v3
  labels:
    creation_method: manual-v3
    app: nginx
spec:
  containers:
  - name: http-go
    image: gasbugs/http-go
    ports:
    - containerPort: 8080
      protocol: TCP
