http-liveness.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-http
  labels:
    name: liveness-http
spec:
  containers:
  - name: liveness-http
    image: k8s.gcr.io/liveness
    args:
      - /server
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
        httpHeaders:
          - name: Custom-Header
            value: Awesome
      initialDelaySeconds: 3
      periodSeconds: 3
