jenkins-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-jenkins
  labels:
    app: jenkins-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deploy-jenkins
  template:
    metadata:
      labels:
        app: deploy-jenkins
    spec:
      containers:
      - name: jenkins-deploy
        image: jenkins/jenkins:latest
        ports:
        - containerPort: 8080
