jenkins-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimeStamp: null
  name: ns-jenkins
spec: {}
status: {}

---

apiVersion: v1
kind: Pod
metadata:
  name: jenkins
  namespace: ns-jenkins
spec:
  containers:
    - name: jenkins
      image: jenkins/jenkins
      ports:
        - containerPort: 8080
