pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k-sim-app
  labels:
    name: k-sim-app
spec:
  containers:
  - name: k-sim-app
    image: arisu1000/simple-container-app:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
