deploy-config01.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configmap-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: configmap-app
  template:
    metadata:
      labels:
        app: configmap-app
    spec:
      containers:
      - name: configmap-app
        image: arisu1000/simple-container-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: configmap-app-svc
  labels:
    app: configmap-app
  namespace: default
spec:
  selector:
    app: configmap-app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 30081
  type: NodePort
