deploy-secret01.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-app01
spec:
  selector:
    matchLabels:
      app: secret-app01
  template:
    metadata:
      labels:
        app: secret-app01
    spec:
      containers:
      - name: secret-app01
        image: arisu1000/simple-container-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: secret-svc01
spec:
  type: NodePort
  selector:
    app: secret-app01
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 30090
