deploy-secret02.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-app02
spec:
  selector:
    matchLabels:
      app: secret-app02
  template:
    metadata:
      labels:
        app: secret-app02
    spec:
      containers:
      - name: secret-app02
        image: arisu1000/simple-container-app:latest
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /etc/volume-secret
            name: volume-secret
      volumes:
      - name: volume-secret
        secret:
          secretName: user-pass-sec

---
apiVersion: v1
kind: Service
metadata:
  name: secret-svc02
spec:
  type: NodePort
  selector:
    app: secret-app02
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 30091
