ingress-basic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  labels:
      name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/foo1"
        backend:
          service:
              name: s1
              port:
                number: 80
      - pathType: Prefix
        path: "/bar2"
        backend:
          service:
              name: s2
              port:
                number: 80
  - host: bar.foo.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: s3
              port:
                number: 80
